--- a/frontend/src/styles/modules/_colors.scss
+++ b/frontend/src/styles/modules/_colors.scss
@@ -2,6 +2,7 @@ $color-white: #fff;
 $color-black: #1B1F2A;
 $color-theta-green: #21EDBA;
 $color-theta-blue: #29B3EB;
+$color-light: #7C81A3;
 
 $color-page: #1b1f2a;
 $color-panel: rgba(#D6D8FF, .05);
@@ -15,21 +16,24 @@ $color-font-body: $color-font-main;
 $color-font-link: $color-font-main;
 $color-font-link-hover: $color-font-highlight;
 $color-font-button: $color-black;
+$color-font-button-light: $color-font-main;
 
-$color-line: darken(#7C81A3, 25%);
+$color-line: darken($color-light, 25%);
 $color-line-main: $color-line;
-$color-line-light: darken(#7C81A3, 35%);
+$color-line-light: darken($color-light, 35%);
 
 $color-select-back: $color-font-highlight;
 $color-select-type: $color-font-main;
 
-$color-input-background: rgba(#7C81A3, .35);
+$color-input-background: rgba($color-light, .35);
 $color-input-text: $color-font-main;
 $color-input-placeholder: rgba($color-font-main, .5);
 $color-input-border: $color-line-main;
 
 $color-table-row: rgba(#D6D8FF, .05);
 $color-table-row-alt: rgba(#D6D8FF, .02);
+
+$color-button-light: rgba($color-light, .45);
 
 
 
