--- a/frontend/src/styles/components/_header.scss
+++ b/frontend/src/styles/components/_header.scss
@@ -15,9 +15,8 @@
     flex: 1 0 auto;
 
     .theta-logo {
-      flex: 0 0 116px;
-      height: 40px;
-      width: 116px;
+      flex: 0 0 7.25rem;
+      height: 2.5rem;
       margin: 0 7% 0 0;
 
       background: url("/images/logo_theta-explorer@2x.png");
@@ -29,7 +28,6 @@
       font-weight: $weight-bold;
       padding: .65rem;
       margin-right: 5%;
-      //margin-right: 1rem;
       
       color: $color-font-main;
       font-size: 1rem;
@@ -136,7 +134,7 @@
   }
   @include breakpoint('phablet', max) {
     width: 95%;
-    .nav .theta-logo { flex: 0 0 80px; }
+    .nav .theta-logo { flex: 0 0 6rem; }
   }
   
 }
