--- a/frontend/src/styles/components/_not-exist.scss
+++ b/frontend/src/styles/components/_not-exist.scss
@@ -5,7 +5,7 @@
     margin-left: 10%;
     text-align: center;
     font-size: 40px;
-    color: $th-grey;
+    color: $color-font-light;
     display: flex;
     justify-content: center;
     padding-top: 20%;
