--- a/frontend/src/styles/partials/_buttons.scss
+++ b/frontend/src/styles/partials/_buttons.scss
@@ -106,6 +106,17 @@ a.btn {
     }
    }
 
+  &.tx {
+    font-family: $font-body;
+    padding: 0;
+    background: transparent;
+    font-size: .875rem;
+    font-weight: $weight-semi;
+    color: $color-font-main;
+    text-transform: capitalize;
+    letter-spacing: 0px;
+  } 
+
 
   // SIZES
   
