Added raw json viewer to see transaction details

--- a/frontend/src/styles/partials/_utils.scss
+++ b/frontend/src/styles/partials/_utils.scss
@@ -5,6 +5,10 @@
   flex: 1;
 }
 
+.hide {
+  display: none;
+}
+
 
 @mixin flex($direction: row, $justify: flex-start, $align: center, $wrap: nowrap) {
   display: flex;
