--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -21,6 +21,7 @@
 @import 'components/blocks-table';
 @import 'components/loading-panel';
 @import 'components/spinner';
+@import 'components/json-view';
 
 // SECTIONS 
 @import 'sections/home';
