--- a/frontend/src/styles/partials/_misc-ui.scss
+++ b/frontend/src/styles/partials/_misc-ui.scss
@@ -24,3 +24,41 @@
     &:before { background-image: url('/images/icons/theta-icon@2x.png'); }
   }
 }
+
+body.show-modal {
+  overflow: hidden;
+}
+
+.modal {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba($color-black, .95);
+  .modal-close {
+    display: block;
+    position: absolute;
+    top: 1rem;
+    right: 2rem;
+    z-index: 100;
+    width: 50px;
+    height: 50px;
+    background-image: url('/images/close_button@2x.png');
+    background-position: center center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-color: rgba($color-white, .05);
+    border-radius: 50%;
+  }
+  .modal-content {
+    padding: 4rem;
+    height: 100%;
+    overflow-y: auto;
+  }
+  @include breakpoint('phablet', max) {
+    .modal-content {
+      padding: 1rem;
+    }
+  }
+}
