Add internal check page

--- a/frontend/src/styles/sections/_home.scss
+++ b/frontend/src/styles/sections/_home.scss
@@ -40,3 +40,13 @@
     }
   }
 }
+
+.content.check {
+  display: flex;
+  flex-direction: column;
+
+  &.search{
+    display: flex;
+    justify-content: space-around;
+  }
+}
