--- a/frontend/src/styles/sections/_transactions.scss
+++ b/frontend/src/styles/sections/_transactions.scss
@@ -72,7 +72,7 @@
 }
   
 .txn-type.coinbase:before { background-image: url('/images/icons/icon_coinbase@2x.png'); }
-.txn-type.send:before { background-image: url('/images/icons/icon_send@2x.png'); }
+.txn-type.transfer:before { background-image: url('/images/icons/icon_send@2x.png'); }
 .txn-type.service-payment:before { background-image: url('/images/icons/icon_servicepayment@2x.png'); }
 .txn-type.split-contract:before { background-image: url('/images/icons/icon_splitcontract@2x.png'); }
 .txn-type.reserve:before { background-image: url('/images/icons/icon_reservefund@2x.png'); }
