Add toggle button

--- a/frontend/src/styles/modules/_colors.scss
+++ b/frontend/src/styles/modules/_colors.scss
@@ -1,6 +1,7 @@
 // brand colors
 $color-theta-green: #21EDBA;
 $color-theta-blue: #29B3EB;
+$color-theta-blue-light: #25C4E4;
 
 // basic colors
 $color-white: #fff;
@@ -8,6 +9,7 @@ $color-black: #1B1F2A;
 $color-blue: $color-theta-blue;
 $color-green: $color-theta-green;
 $color-light: #7C81A3;
+$color-grey-dark: #4A5776;
 
 // panels
 $color-page: #1b1f2a;
