--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -22,6 +22,7 @@
 @import 'components/loading-panel';
 @import 'components/spinner';
 @import 'components/json-view';
+@import 'components/stake';
 
 // SECTIONS 
 @import 'sections/home';
