--- a/frontend/src/styles/modules/_colors.scss
+++ b/frontend/src/styles/modules/_colors.scss
@@ -45,6 +45,7 @@ $color-input-border: $color-line-main;
 // Tables
 $color-table-row: rgba(#D6D8FF, .05);
 $color-table-row-alt: rgba(#D6D8FF, .02);
+$color-table-row-line: rgba(#D6D8FF, .12);
 
 // Buttons
 $color-button-light: rgba($color-light, .45);
