--- a/frontend/src/styles/components/_transaction-table.scss
+++ b/frontend/src/styles/components/_transaction-table.scss
@@ -39,7 +39,9 @@ table.data.txn-table {
   td.block {
     color: $color-font-light;
   }
-
+  td.dim a, td.token{
+    color: $color-font-light;
+  }
   tr .icon {
     &:before {
       content: '';
