--- a/frontend/src/styles/sections/_account.scss
+++ b/frontend/src/styles/sections/_account.scss
@@ -93,5 +93,17 @@
       }
     }
   }
-  
+}
+
+.act.balance{
+  display: flex;
+  flex-direction: row;
+  .currency{
+    width: 50%;
+    display: flex;
+    .price{
+      margin-left: 5px;
+      color: $color-light;
+    }
+  }
 }
