--- a/frontend/src/styles/components/_transaction-table.scss
+++ b/frontend/src/styles/components/_transaction-table.scss
@@ -42,7 +42,7 @@ table.data.txn-table {
     color: $color-font-light;
   }
   td.token, th.token{
-    float: right;
+    text-align: right;
   }
   td.dim a, td.token{
     color: $color-font-light;
