Add token dashboard

--- a/frontend/src/styles/modules/_colors.scss
+++ b/frontend/src/styles/modules/_colors.scss
@@ -10,6 +10,8 @@ $color-blue: $color-theta-blue;
 $color-green: $color-theta-green;
 $color-light: #7C81A3;
 $color-grey-dark: #4A5776;
+$color-red: #FF4F0F;
+$color-orange: #FFB515;
 
 // panels
 $color-page: #1b1f2a;
