--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -17,6 +17,7 @@
 @import 'components/header';
 @import 'components/not-exist';
 @import 'components/pagination';
+@import 'components/token-dashboard';
 @import 'components/transaction-table';
 @import 'components/blocks-table';
 @import 'components/loading-panel';
