--- a/frontend/src/styles/components/_token-dashboard.scss
+++ b/frontend/src/styles/components/_token-dashboard.scss
@@ -41,6 +41,7 @@
     }
 
     .detail{
+      height: 48px;
       border-left: 1px solid rgba($color-font-light, 0.2);
       padding-left: 10px;
       .title{
