--- a/frontend/src/styles/sections/_transactions.scss
+++ b/frontend/src/styles/sections/_transactions.scss
@@ -41,6 +41,7 @@
     & > *:first-child {
       margin-right: 1rem;
       white-space: nowrap;
+      width: 30%;
     }
     & > a {
       display: block;
