--- a/frontend/src/styles/components/_stake.scss
+++ b/frontend/src/styles/components/_stake.scss
@@ -13,15 +13,43 @@
         font-family: $font-title;
         font-weight: $weight-bold;
         font-size: 1.0rem;
-        color: $color-font-light;
         letter-spacing: 1.5px;
+    }
+    .arrow-container{
+        padding: 0;
+        text-align: center;
+        i {
+            border: solid $color-font-light;
+            border-width: 0 2px 2px 0;
+            display: inline-block;
+            padding: 3px;
+            margin: 0 5px;
+        }
+
+        .up {
+            transform: rotate(-135deg);
+            -webkit-transform: rotate(-135deg);
+        }
+
+        .down {
+            transform: rotate(45deg);
+            -webkit-transform: rotate(45deg);
+        }
+    }
+    .total{
+        width: 100%;
+        display: flex;
+        flex-direction: row-reverse;
+        color: $color-font-light;
+        font-size: .875rem;
+        padding: .75rem;
+    }
+    .empty{
+        height: 0px;
+        padding: 0;
     }
 }
 .stake-tb tr:last-child{
-    // display:block;
-    // max-height:60px;
-    // overflow:auto;
-    // table-layout:fixed;
     background-color: transparent !important;
     border-top: 3px solid $color-table-row-line;
 }
