--- a/frontend/src/styles/partials/_buttons.scss
+++ b/frontend/src/styles/partials/_buttons.scss
@@ -152,3 +152,57 @@ a.btn {
     justify-content: space-between;
   }
 }
+
+.theta-switch {
+  position: relative;
+  display: inline-block;
+  width: 32px;
+  height: 20px;
+  margin-left: 10px;
+}
+
+.theta-switch input { 
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.theta-slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  border-radius: 20px;
+  background-color: $color-grey-dark;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.theta-slider:before {
+  position: absolute;
+  content: "";
+  height: 14px;
+  width: 14px;
+  left: 3px;
+  bottom: 3px;
+  border-radius: 50%;
+  background-color: $color-white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .theta-slider {
+  background-color: $color-theta-blue-light;
+}
+
+input:focus + .theta-slider {
+  box-shadow: 0 0 1px $color-theta-blue-light;
+}
+
+input:checked + .theta-slider:before {
+  -webkit-transform: translateX(12px);
+  -ms-transform: translateX(12px);
+  transform: translateX(12px);
+}
