Add withdraw status

--- a/frontend/src/styles/components/_stake.scss
+++ b/frontend/src/styles/components/_stake.scss
@@ -17,7 +17,7 @@
     }
     .arrow-container{
         cursor: pointer;
-        color: $color-font-light;
+        color: $color-theta-blue-light;
         padding: 0;
         text-align: center;
         i {
