Add doughnut chart

--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -24,6 +24,7 @@
 @import 'components/spinner';
 @import 'components/json-view';
 @import 'components/stake';
+@import 'components/chart';
 
 // SECTIONS 
 @import 'sections/home';
