Add stakes page

--- a/frontend/src/styles/components/_chart.scss
+++ b/frontend/src/styles/components/_chart.scss
@@ -1,8 +1,4 @@
 .chart{
     width:14vw;
-    margin: 10px 25%;
-    .canvas{
-        // height: 100px !important;
-        // width: 100px !important;
-    }
+    margin: 10px calc(50% - 7vw);
 }
