--- a/frontend/src/styles/partials/_layout.scss
+++ b/frontend/src/styles/partials/_layout.scss
@@ -68,6 +68,9 @@ body {
       letter-spacing: .375rem;
       width: 80%;
       margin: 5rem auto 2.5rem;
+      &.stakes{
+        margin-bottom: 27px;
+      }
       &.transactions,
       &.account,
       &.blocks {
