--- a/frontend/src/styles/sections/_stakes.scss
+++ b/frontend/src/styles/sections/_stakes.scss
@@ -10,4 +10,11 @@
         color: $color-font-light;
         border-bottom: 1px solid rgba($color-font-light, 0.2);
     }
+    .table-container{
+        display: flex;
+        justify-content: space-between;
+        .stakes.half{
+            margin-top: 30px;
+        }
+    }
 }
