--- a/frontend/src/styles/components/_transaction-table.scss
+++ b/frontend/src/styles/components/_transaction-table.scss
@@ -44,6 +44,10 @@ table.data.txn-table {
   }
   td.token, th.token{
     text-align: right;
+    &.left{
+      text-align: left;
+      padding-left: 0;
+    }
   }
   td.dim a, td.token{
     color: $color-font-light;
