--- a/frontend/src/styles/sections/_transactions.scss
+++ b/frontend/src/styles/sections/_transactions.scss
@@ -76,7 +76,11 @@
 .txn-type.transfer:before { background-image: url('/images/icons/icon_send@2x.png'); }
 .txn-type.service-payment:before { background-image: url('/images/icons/icon_servicepayment@2x.png'); }
 .txn-type.split-contract:before { background-image: url('/images/icons/icon_splitcontract@2x.png'); }
+.txn-type.smart-contract:before { background-image: url('/images/icons/icon_smartcontract@2x.png'); }
 .txn-type.reserve:before { background-image: url('/images/icons/icon_reservefund@2x.png'); }
 .txn-type.release:before { background-image: url('/images/icons/icon_releasefund@2x.png'); }
 .txn-type.slash:before { background-image: url('/images/icons/icon_slash@2x.png'); }
+.txn-type.deposit-stake:before { background-image: url('/images/icons/icon_deposit-stake-transaction@2x.png'); }
+.txn-type.withdraw-stake:before { background-image: url('/images/icons/icon_withdraw-stake-transaction@2x.png'); }
+
 .txn-type.update-validators:before { background-image: url('/images/icons/icon_updatevalidators@2x.png'); }
